[package]
name = "samplify-rs"
version = "0.1.0"
edition = "2021"
description = "A procedural macro to generate sample data for Rust structs."
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/samplify-rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"