[package]
name = "samplify-rs"
version = "0.1.0"
edition = "2021"
exclude = [".DS_Store", "/target", ".vscode"]
authors = ["Harishankar Narayanan <nharishankar@gmail.com>"]
license = "Apache-2.0"
description = "A procedural macro to generate sample data for Rust structs."
readme = "README.md"
homepage = "https://github.com/Open-Payments/samplify-rs"
repository = "https://github.com/Open-Payments/samplify-rs"
keywords = ["Sample generator", "Mock data", "Testing", "Data generator"]
categories = ["data-structures", "development-tools"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"